--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,9 @@ python-multipart==0.0.20
 python-dotenv==1.0.0
 
 # AI and ML Libraries
-langchain==0.0.344
-langchain-openai==0.0.2
+langchain>=0.1.0
+langchain-openai>=0.1.0
+langchain-core>=0.1.0
 openai>=1.6.1
 huggingface-hub==0.19.4
 sentence-transformers==2.2.2
